# scp

./: .gitignore  Cargo.toml  ENCODING.md  OPERATOR_DOCTRINE.md  README.md  SCP_SPEC.md  STATE_SEMANTICS.md
.claude/: claude.md
.claude/skills/epistemic-compression/: SKILL.md
.github/workflows/: pages.yml
cli/endpoint/: Cargo.toml
cli/endpoint/src/: main.rs
client/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/desktop/public/: relay-kill-failover-live-2026-07-05.trace.json
client/desktop/src/: main.ts
client/desktop/src-tauri/: Cargo.toml  tauri.conf.json
client/desktop/src-tauri/src/: main.rs
client/desktop/src/ui/: App.ts
client/mobile/android/: settings.gradle.kts
client/mobile/android/app/: build.gradle.kts
client/mobile/android/app/src/main/: AndroidManifest.xml
client/mobile/android/app/src/main/kotlin/com/scp/client/: MainActivity.kt
client/mobile/android/app/src/main/kotlin/com/scp/client/ui/: CorridorListScreen.kt  HandshakeScreen.kt
client/mobile/android/gradle/: libs.versions.toml
core/cryptography/: Cargo.toml
core/cryptography/src/: algorithms.rs  domains.rs  keys.rs  lib.rs
core/identity/: Cargo.toml
core/identity/src/: genesis.rs  lib.rs  lineage.rs  rotation.rs
core/recovery/: Cargo.toml
core/recovery/src/: guardian.rs  lib.rs  shard.rs
core/transport/: Cargo.toml
core/transport/src/: corridor.rs  flash.rs  harness.rs  lib.rs  quorum.rs  replay.rs  session.rs  state.rs  transcript.rs
core/transport/src/transcript/: v1.rs  v2.rs
core/vitality/: Cargo.toml
core/vitality/src/: evidence.rs  function.rs  lib.rs  sim_context.rs  state.rs
docs/: POWERPLANT_DOGFOOD_NOTES.md  PRODUCT_VECTOR_SCALE_POSTMORTEM.md  simulator-baseline-provenance.md  trial1c-plan.md
docs/architecture/: ARCHITECTURE_REALITY_GATE.md  CORRIDOR_FACILITATOR_SCRIPT.md  CORRIDOR_PARTICIPANT_SHEET.md  CORRIDOR_SCENARIO_HARNESS_PLAN.md  CORRIDOR_SCORING_RUBRIC.md  CORRIDOR_TEST_RESULTS.md  CORRIDOR_TRIAL_1C_RUNTIME_VITALITY_WIRING_PLAN.md  CORRIDOR_TRIAL_1_INACTIVITY_REAFFIRMATION_PLAN.md  CORRIDOR_TRIAL_2_PROVIDER_FAILURE_OBSERVABILITY_PLAN.md  CORRIDOR_TRIAL_3_CONCURRENT_PRESSURE_ORTHOGONALITY_PLAN.md  CORRIDOR_TRIAL_4_SELECTIVE_RESPONSE_SUPPRESSION_PLAN.md  CORRIDOR_TRIAL_5A_EVENT_PROVENANCE_MODEL_DECISION.md  CORRIDOR_TRIAL_5B_ADMISSIBLE_SURFACE_IMPLEMENTATION_GATE.md  CORRIDOR_TRIAL_5C_ADMISSIBLE_SURFACE_ADVERSARIAL_VALIDATION_PLAN.md  CORRIDOR_TRIAL_5_RESPONSE_PROVENANCE_ADMISSIBILITY_PLAN.md  LAN_DEV_HARNESS_RUNBOOK.md  OPTION_2_MULTIRELAY_CLOSURE_RECORD.md  PRODUCTION_READINESS_BUILD_PLAN.md  PROVIDERPOOL_MULTIRELAY_ARCHITECTURE_DESIGN.md  PROVIDERPOOL_REAL_NETWORK_LIVENESS_TRIAL_PLAN.md  RUNTIME_BOOTSTRAP_PLAN.md  TRIAL_1B_CLOSURE_RECORD.md  TRIAL_1C_CLOSURE_RECORD.md  TRIAL_2_CLOSURE_RECORD.md  TRIAL_3_CLOSURE_RECORD.md  TRIAL_4_CLOSURE_RECORD.md  TRIAL_5B_CLOSURE_RECORD.md  TRIAL_5C_CLOSURE_RECORD.md  VITALITY_ORACLE_POLICY_DECISION.md
docs/cryptography/: CRYPTOGRAPHY.md
docs/design/: AGENT_SUBSTRATE_FORK.md  CONSUMER_FACING_PRODUCT_PLAN.md  office-hours-scp-corridor-console-wedge-2026-07-05.md
docs/design/corridor-console-validation/: relay-kill-failover-live-2026-07-05.ass
docs/philosophy/: DOCTRINES.md  EPISTEMIC_COMPRESSION_LOOP.md  ecl-record.schema.json
docs/sts/: STS_OVERVIEW.md
docs/threat-model/: THREAT_MODEL.md
docs/transport/: TRANSPORT.md
ledger/cosmos/: Cargo.toml
ledger/cosmos/src/: lib.rs
ledger/substrate/: Cargo.toml
ledger/substrate/src/: lib.rs
provider/delivery/: Cargo.toml
provider/delivery/src/: lib.rs
provider/pool/: Cargo.toml
provider/pool/src/: admission.rs  dummy.rs  eviction.rs  exposure.rs  lib.rs  liveness.rs  metrics.rs  reputation.rs  rotation.rs  sampling.rs
relay/cache/: Cargo.toml
relay/cache/src/: lib.rs
relay/daemon/: Cargo.toml
relay/daemon/src/: main.rs
relay/mesh/: Cargo.toml
relay/mesh/src/: bootstrap.rs  lib.rs
relay/perturbation/: Cargo.toml
relay/perturbation/src/: lib.rs
scp-wire-format/: Cargo.toml
scp-wire-format/src/: constants.rs  framing.rs  lib.rs  signing.rs  transcript.rs  version.rs
test/: Cargo.toml
test/adversarial/: README.md
test/metadata/: README.md
test/recovery/: README.md
test/src/: lib.rs
test/tests/: adversarial.rs  corridor.rs  ecl_schema.rs  lan_liveness_trial.rs  level1.rs  metadata.rs  multirelay_failover.rs  pool.rs  pool_delivery_seam.rs  property.rs  quorum.rs  recovery.rs  sim.rs  state.rs  state_machine.rs  transport.rs  trial0.rs  trial1b.rs  trial1c.rs  trial2.rs  trial3.rs  trial4.rs  trial5b.rs  trial5b_receipt_bound.rs  trial5c.rs  vitality.rs  wire_vectors.rs
test/transport/: README.md
tests/: POWERPLANT_AUDIT.md
