[package]
name = "scp-cryptography"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
chacha20poly1305.workspace = true
blake3.workspace = true
rand.workspace = true
rand_core.workspace = true
zeroize.workspace = true
thiserror.workspace = true
serde.workspace = true
