[package]
name = "scp-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
scp-wire-format.workspace = true
scp-ledger-substrate.workspace = true
scp-cryptography.workspace = true
scp-identity.workspace = true
scp-vitality.workspace = true
scp-relay-mesh.workspace = true
scp-relay-cache.workspace = true
scp-relay-perturbation.workspace = true
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
rand_core.workspace = true
