[package]
name = "scp-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dev-harness relay daemon with opaque token-keyed mailbox. NOT PRODUCTION."

[[bin]]
name = "scp-relay"
path = "src/main.rs"

[dependencies]
blake3 = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
