[package]
name = "scp-desktop"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[[bin]]
name = "scp-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
scp-cryptography = { path = "../../core/cryptography" }
scp-identity     = { path = "../../core/identity" }
